--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -1,6 +1,9 @@
 /* 追従ボタン シングルタップ設定 */
-.fixed-bottom {
-    bottom: 44px;
+.onetapbtn {
+  display:none;
+}
+.fixed-bottom{
+  bottom:40px;
 }
 
 /* パソコンで見たときは"pc"のclassがついた画像が表示される */
