--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -175,7 +175,7 @@
   /*IE*/
 }
 
-/* 応募ボタン */
+/* 応募ボタン div全体をボタン化 */
 .oubobtn {
     position: relative;
     z-index: 1; /* 必要であればリンク要素の重なりのベース順序指定 */
@@ -187,7 +187,7 @@
     bottom: 0;
     right: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
     z-index: 2; /* 必要であればリンク要素の重なりのベース順序指定 */
 }
 .oubobtn:hover {
@@ -204,7 +204,7 @@
   /*IE*/
 }
 
-/* テスト */
+/* ボタンをきらっと */
 .shiny-btn1 {
     display: block;
     position: relative;
