--- a/docs/ver1/common.css
+++ b/docs/ver1/common.css
@@ -204,7 +204,7 @@
   /*IE*/
 }
 
-/* ボタンをきらっと */
+/* ボタンをきらっと PC */
 .shiny-btn1 {
     display: block;
     position: relative;
@@ -246,7 +246,47 @@
     100% { -webkit-transform: scale(50) rotate(45deg); opacity: 0; }
 }
 
-
+/* ボタンをきらっとSP */
+.shiny-btn2 {
+    display: block;
+    position: relative;
+    width: 80%;/*ボタンの幅*/
+    padding: 10px 0;
+    margin: 2px auto;
+    background-color: #00AEEF;/*ボタンの色*/
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    text-decoration: none;
+    overflow: hidden;
+}
+.shiny-btn2 a{
+      color: #fff!important;
+}
+.shiny-btn2:hover {
+    text-decoration: none;
+    color: #fff;
+}
+.shiny-btn2 a:hover{
+      text-decoration: none!important;
+}
+.shiny-btn2::before {
+    position: absolute;
+    content: '';
+    display: inline-block;
+    top: -180px;
+    left: 0;
+    width: 30px;
+    height: 100%;
+    background-color: #fff;
+    animation: shiny-btn2 3s ease-in-out infinite;
+}
+@-webkit-keyframes shiny-btn2 {
+    0% { -webkit-transform: scale(0) rotate(45deg); opacity: 0; }
+    80% { -webkit-transform: scale(0) rotate(45deg); opacity: 0.5; }
+    81% { -webkit-transform: scale(4) rotate(45deg); opacity: 1; }
+    100% { -webkit-transform: scale(50) rotate(45deg); opacity: 0; }
+}
 
   /* modal フルスクリーン */
   .fullscreen{
